Cursor icon doesn't change back when you right-click to undo #55178

Closed
opened 2018-05-24 12:16:07 +02:00 by Hjalti Hjálmarsson · 5 comments

System Information
Xbuntu / AMD

Blender Version
b2a2983

Short description of error
When you transform an object (location/rotation/scale) the cursor changes into a specific icon. When you right-click with your mouse it undos the transformation but the cursor icon doesn't change back into its original icon.

For location it stays the same but for rotation and scale the cursor just disappears.

Exact steps for others to reproduce the error
New file
Select cube
Hit G, R or S to manipulate
Right-click your mouse to undo
Witness the horror

**System Information** Xbuntu / AMD **Blender Version** b2a2983 **Short description of error** When you transform an object (location/rotation/scale) the cursor changes into a specific icon. When you right-click with your mouse it undos the transformation but the cursor icon doesn't change back into its original icon. For location it stays the same but for rotation and scale the cursor just disappears. **Exact steps for others to reproduce the error** New file Select cube Hit G, R or S to manipulate Right-click your mouse to undo Witness the horror
Author
Member

Added subscriber: @Hjalti

Added subscriber: @Hjalti
Member

Added subscribers: @ideasman42, @JoshuaLeung

Added subscribers: @ideasman42, @JoshuaLeung
Campbell Barton was assigned by Joshua Leung 2018-05-24 12:30:27 +02:00
Member

Actually it's not only when cancelling transforms, but it also occurs when a transform is ended normally.

Ran into this a few moments ago, and @ideasman42 will fix. Was caused by 6955add502

Actually it's not only when cancelling transforms, but it also occurs when a transform is ended normally. Ran into this a few moments ago, and @ideasman42 will fix. Was caused by 6955add502

This issue was referenced by 39aea50155

This issue was referenced by 39aea50155dc623db48f900d2b9644b607425b6c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55178
No description provided.