Fix T55178: Cursor fails to restore on cancel

574c0fe38f332bd97c588029c0075ecba1fe19cd caused complications
restoring the cursor.

Use WM_cursor_modal_set/restore which is intended for operator use,
calling ED_region_cursor_set after an operator runs isn't reliable.