source/blender/editors/transform/transform.h
@@ -601,6 +601,8 @@ typedef struct TransInfo {
 	/** #TransInfo.center has been set, don't change it. */
 #define T_OVERRIDE_CENTER	(1 << 25)
 
+#define T_MODAL_CURSOR_SET	(1 << 26)
+
 /* TransInfo->modifiers */
 #define	MOD_CONSTRAINT_SELECT	0x01
 #define	MOD_PRECISION			0x02
